# Dome3

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md  TODO.md
misc/: Dome3.icns
src/: clipboard.rs  crypto.rs  csv.rs  main.rs  models.rs
